# rtcclient

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  ChangeLog  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: ci.yml  release.yml
doc/: Makefile  make.bat  requirements.txt
doc/source/: advanced_usage.rst  client.rst  conf.py  index.rst  installation.rst  introduction.rst  models.rst  projectarea.rst  query.rst  quickstart.rst  template.rst  workitem.rst  workitem_attr.rst
examples/how_to/query/: query_workitems.py
examples/how_to/workitem/: add_comment.py  get_workitem.py
rtcclient/: __init__.py  base.py  client.py  exception.py  models.py  project_area.py  query.py  template.py  utils.py  workitem.py
rtcclient/templates/: issue_example.template
tests/: conftest.py  test_base.py  test_client.py  test_projectarea.py  test_query.py  test_template.py  test_workitem.py  utils_test.py
tests/fixtures/: actions.xml  administrators.xml  attachment.xml  changesets.xml  children.xml  comments.xml  filedagainsts.xml  foundins.xml  includedinbuilds.xml  issue_example.template  itemtypes.xml  members.xml  parent.xml  plannedfors.xml  priorities.xml  projectareas.xml  roles.xml  savedqueries.xml  severities.xml  states.xml  teamareas.xml  test.xml  workitems.xml
