[metadata]
name = rtcclient
author = Di Xu
version = 0.1
author_email = stephenhsu90@gmail.com
summary = RTCClient for Rational Team Concert
description-file = README.rst
license = Apache License, Version 2.0
home-page = https://github.com/dixudx/rtcclient
classifier =
    Development Status :: 5 - Production/Stable
    Topic :: Utilities
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[pbr]
warnerrors = True

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
builders = html,man,linkcheck
