[metadata]
name = rtcclient
author = Di Xu
version = 0.8.1
author_email = stephenhsu90@gmail.com
summary = RTCClient for Rational Team Concert
description_file = README.rst
keywords =
    rtcclient
    Rational Team Concert
    RTC
license = Apache License, Version 2.0
home_page = https://github.com/dixudx/rtcclient
python_requires = ">=3.5"
classifier =
    Development Status :: 5 - Production/Stable
    Topic :: Utilities
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[extras]
test =
    pytest
    pytest-env
    pytest-mock>=0.6.0

[pbr]
warnerrors = True

[files]
packages = rtcclient

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
builders = html,man,linkcheck

[bdist_wheel]
universal=0
